--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ things-box{
     align-items: center;
     justify-content: right;
     margin-bottom: 70%;
-    color: white;
+    color: rgb(244, 225, 225);
 }
 
 .reviewItem {
@@ -427,7 +427,7 @@ things-box{
     margin: 1rem;
     cursor: pointer;
     border-radius: 10px;
-    color: white;
+    color: rgb(13, 13, 13);
     border: 1px solid #10102a;
     transition: all .2s linear;
     justify-content: center;
@@ -443,7 +443,7 @@ things-box{
 .review{
     width:100%;
     height:15%;
- color: rgb(8, 7, 7);
+ color: rgb(16, 10, 10);
 
  display: block;
  align-items: center;
@@ -459,7 +459,7 @@ display: flex;
 flex-direction: row;
 float: left;
 margin-bottom: 35%;
-background-color: white;
+background-color: rgb(238, 224, 224);
 justify-content: center;
 }
 
@@ -485,7 +485,7 @@ justify-content: center;
     list-style: none;
 }
 .container{
-    background-color: rgb(244, 236, 236);
+    background-color: rgb(232, 200, 200);
 }
 .top ul li {
     padding-left: 4px;
@@ -493,42 +493,159 @@ justify-content: center;
 .container1{
     margin-top: 80%;
 }
-.footer{
-  
-   background-color: rgb(98, 97, 94);
-    color: rgb(12, 7, 7);
-}
-.footer-logo{
-    width: 100px;
-    height: 100px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-.footer h4{
-    text-align: left;
-    margin-top: 15px;
-    margin-bottom: 25px;
-}
-.footer p{
-    font-size: 12px;
-    text-align: justify;
-    padding-right: 35px;
-}
-.footer .row .fa{
-    padding-right: 10px;
-    font-size: 15px;
 
-}
-.footer hr{
-    margin-bottom: 20px;
-    background: #2d557d;
-}
-.fa-heart{
-    margin: 0 5px;
-    color:brown;
-
-}
-.footer .copyright{
-    text-align: center;
+ul {
+    margin: 0px;
+    padding: 0px;
 }
 
+
+.single-cta i {
+  color: #ff5e14;
+  font-size: 30px;
+  float: left;
+  margin-top: 8px;
+}
+.cta-text {
+  padding-left: 15px;
+  display: inline-block;
+}
+.cta-text h4 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 2px;
+}
+.cta-text span {
+  color: #757575;
+  font-size: 15px;
+}
+.footer-content {
+  position: relative;
+  z-index: 2;
+}
+.footer-pattern img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 330px;
+  background-size: cover;
+  background-position: 100% 100%;
+}
+.footer-logo {
+  margin-bottom: 30px;
+}
+.footer-logo img {
+    max-width: 200px;
+}
+.footer-text p {
+  margin-bottom: 14px;
+  font-size: 14px;
+      color: #7e7e7e;
+  line-height: 28px;
+}
+.footer-social-icon span {
+  color: #fff;
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: 'Poppins', sans-serif;
+  margin-bottom: 20px;
+}
+.footer-social-icon a {
+  color: #fff;
+  font-size: 16px;
+  margin-right: 15px;
+}
+.footer-social-icon i {
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 38px;
+  border-radius: 50%;
+}
+.facebook-bg{
+  background: #3B5998;
+}
+.twitter-bg{
+  background: #55ACEE;
+}
+.google-bg{
+  background: #DD4B39;
+}
+.footer-widget-heading h3 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 40px;
+  position: relative;
+}
+.footer-widget-heading h3::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  height: 2px;
+  width: 50px;
+  background: #ff5e14;
+}
+.footer-widget ul li {
+  display: inline-block;
+  float: left;
+  width: 50%;
+  margin-bottom: 12px;
+}
+.footer-widget ul li a:hover{
+  color: #ff5e14;
+}
+.footer-widget ul li a {
+  color: #878787;
+  text-transform: capitalize;
+}
+.subscribe-form {
+  position: relative;
+  overflow: hidden;
+}
+.subscribe-form input {
+  width: 100%;
+  padding: 14px 28px;
+  background: #2E2E2E;
+  border: 1px solid #2E2E2E;
+  color: #fff;
+}
+.subscribe-form button {
+    position: absolute;
+    right: 0;
+    background: #ff5e14;
+    padding: 13px 20px;
+    border: 1px solid #ff5e14;
+    top: 0;
+}
+.subscribe-form button i {
+  color: #fff;
+  font-size: 22px;
+  transform: rotate(-6deg);
+}
+.copyright-area{
+  background: #202020;
+  padding: 25px 0;
+}
+.copyright-text p {
+  margin: 0;
+  font-size: 14px;
+  color: #878787;
+}
+.copyright-text p a{
+  color: #ff5e14;
+}
+.footer-menu li {
+  display: inline-block;
+  margin-left: 20px;
+}
+.footer-menu li:hover a{
+  color: #ff5e14;
+}
+.footer-menu li a {
+  font-size: 14px;
+  color: #878787;
+}
